# RenderIQ

./: .gitignore  Dockerfile  README.md  cli.py  deploy.sh  docker-compose.yml  healthcheck.sh  install.sh  nginx.conf  pyproject.toml  requirements.txt  run.sh  setup.py  vercel.json
api/: index.py
backend/: auth.py  config.py  main.py
backend/models/: schemas.py
backend/routes/: admin.py  ai_edit.py  download.py  grade.py  presets.py  upload.py
backend/services/: job_manager.py  storage.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: AIPromptInput.jsx  AIResultView.jsx  DownloadPanel.jsx  Footer.jsx  (+7 more)
renderiq/: __init__.py  ai_editor.py  analyzer.py  audio_cleaner.py  auto_recommend.py  auto_zoom.py  captioner.py  comparison.py  enhancer.py  face_tracker.py  grader.py  lut_generator.py  music_sync.py  pipeline.py  presets_builder.py  prompt_parser.py  reframer.py  sampler.py  scene_detector.py  smart_cutter.py  speed_ramper.py  text_overlay.py  thumbnail_gen.py  transitions.py  utils.py
renderiq/smart_grade/: __init__.py  audio_analyzer.py  mood_engine.py  smart_pipeline.py  visual_analyzer.py
scripts/: create_demo_video.py  generate_demos.py  launch_content.md
tests/: conftest.py  test_admin.py  test_analyzer.py  test_api.py  test_audio_analyzer.py  test_edge_cases.py  test_grader.py  test_lut_generator.py  test_mood_engine.py  test_performance.py  test_presets.py  test_quality.py  test_sampler.py  test_smart_pipeline.py  test_visual_analyzer.py
(+10 files in other folders)
